met scorewidgeteditpanel